# handler/auth/login.go
@@ -42,9 +42,9 @@ func (h *handlerImpl) HandleLoginCustomer(c echo.Context) error {
 	c.SetCookie(&http.Cookie{
 		Name:     "refresh_token_id",
 		Value:    *token.RefreshToken,
-		HttpOnly: true, // Không cho phép JavaScript truy cập
-		Secure:   true, // Chỉ gửi qua HTTPS
-		Path:     "/",  // Áp dụng trên toàn bộ ứng dụng
+		HttpOnly: false, // Không cho phép JavaScript truy cập
+		Secure:   false, // Chỉ gửi qua HTTPS
+		Path:     "/",   // Áp dụng trên toàn bộ ứng dụng
 	})
 
 	return response.OK(c, http.StatusOK, "Login successfully", resp)
@@ -77,6 +77,46 @@ func (h *handlerImpl) HandleLoginDeliveryPerson(c echo.Context) error {
 	resp := &res.LoginRes{
 		AccessToken: *token.AccessToken,
 		UserID:      *deliveryPerson.ID,
+	}
+
+	c.SetCookie(&http.Cookie{
+		Name:     "refresh_token_id",
+		Value:    *token.RefreshToken,
+		HttpOnly: false, // Không cho phép JavaScript truy cập
+		Secure:   false, // Chỉ gửi qua HTTPS
+		Path:     "/",   // Áp dụng trên toàn bộ ứng dụng
+	})
+
+	return response.OK(c, http.StatusOK, "Login successfully", resp)
+}
+
+// HandleLoginAccounting implements Handler.
+// @Summary Login Accounting
+// @Description Authenticate Accounting using their phone number and password. Returns an Access Token and sets a Refresh Token in an HttpOnly cookie.
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param login body req.LoginRequest true "Login Request"
+// @Router /auth/accountings/login [post]
+func (h *handlerImpl) HandleLoginAccounting(c echo.Context) error {
+	var login req.LoginRequest
+	if err := c.Bind(&login); err != nil {
+		return response.Error(c, http.StatusBadRequest, "Invalid request body")
+	}
+
+	// 2. Validate dữ liệu
+	if err := req.Validate.Struct(login); err != nil {
+		return response.Error(c, http.StatusBadRequest, err.Error())
+	}
+
+	token, accouting, err := h.authUsecase.LoginAccounting(c.Request().Context(), login.Phone, login.Password)
+	if err != nil {
+		return response.Error(c, err.Code, err.Message)
+	}
+
+	resp := &res.LoginRes{
+		AccessToken: *token.AccessToken,
+		UserID:      *accouting.ID,
 	}
 
 	c.SetCookie(&http.Cookie{
